--- a/style.css
+++ b/style.css
@@ -1,23 +1,25 @@
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: #eee;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*navbar*/
+.sidebar {
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.9)),
+    url("/images/img1.jpeg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 5px 7px 25px #999;
+}
+.bottom-border {
+  border-bottom: 1px groove #eee;
+}
+.sidebar-link:hover {
+  background-color: #444;
+  border-radius: 5px;
+}
+.sidebar-link {
+  transition: all 0.4s;
+}
