--- a/style.css
+++ b/style.css
@@ -92,3 +92,21 @@ body {
   }
 }
 /* end of navbar */
+
+/* cards */
+.card-common {
+  box-shadow: 1px 2px 5px #999;
+  transition: all 0.4s;
+}
+
+.card-common:hover {
+  box-shadow: 2px 3px 15px #999;
+  transform: translateY(-1px);
+}
+/* end of cards */
+
+/* task list */
+.task-border {
+  border-left: 3px solid #f66436;
+}
+/* end of task list */
